--- a/index.html
+++ b/index.html
@@ -146,28 +146,28 @@
                             <ul class="masters-socials-list socials list">
                                 <li class="master-socials-item">
                                  <a href="" class="master-social-link link">
-                                     <svg class="icon-masters-social" widht="44" height="44">
+                                     <svg class="icon-masters-social" widht="20" height="20">
                                          <use href="./images/design-img/sprite.svg#icon-instagram"></use>
                                      </svg>
                                  </a>
                                 </li>
                                 <li class="master-socials-item">
                                     <a href="" class="master-social-link link">
-                                        <svg class="icon-masters-social" widht="44" height="44">
+                                        <svg class="icon-masters-social" widht="20" height="20">
                                             <use href="./images/design-img/sprite.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                    </li>
                                    <li class="master-socials-item"> 
                                     <a href="" class="master-social-link link">
-                                        <svg class="icon-masters-social" widht="44" height="44">
+                                        <svg class="icon-masters-social" widht="20" height="20">
                                             <use href="./images/design-img/sprite.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                    </li>
                                    <li class="master-socials-item">
                                     <a href="" class="master-social-link link">
-                                        <svg class="icon-masters-social" widht="44" height="44">
+                                        <svg class="icon-masters-social" widht="20" height="20">
                                             <use href="./images/design-img/sprite.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
@@ -299,7 +299,7 @@
                 <ul class="clients-list list">
                     <li class="clients-item">
                         <a class="clients-item-link"> 
-                            <svg class="icon-client">
+                            <svg class="icon-client" width="41" height="46">
                                 <use href="./images/design-img/sprite.svg#icon-logo1"></use>
                             </svg>
                         </a>
