--- a/index.html
+++ b/index.html
@@ -295,9 +295,9 @@
 
         <section class="clients section">
             <div class="container">
-                <h2 class="section-title">Наши клиенты</h2>
+                <h2 class="section-title">Постоянные клиенты</h2>
                 <ul class="clients-list list">
-                    <li class="clients-item">
+                     <li class="clients-item">
                         <a class="clients-item-link"> 
                             <svg class="icon-client" width="41" height="46">
                                 <use href="./images/design-img/sprite.svg#icon-logo1"></use>
