--- a/index.html
+++ b/index.html
@@ -298,42 +298,42 @@
                 <h2 class="section-title">Постоянные клиенты</h2>
                 <ul class="clients-list list">
                      <li class="clients-item">
-                        <a class="clients-item-link"> 
+                        <a href="" class="clients-item-link"> 
                             <svg class="icon-client" width="41" height="46">
                                 <use href="./images/design-img/sprite.svg#icon-logo1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="clients-item">
-                        <a class="clients-item-link"> 
+                        <a href="" class="clients-item-link"> 
                             <svg class="icon-client">
                                 <use href="./images/design-img/sprite.svg#icon-logo2"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="clients-item">
-                        <a class="clients-item-link"> 
+                        <a href="" class="clients-item-link"> 
                             <svg class="icon-client">
                                 <use href="./images/design-img/sprite.svg#icon-logo3"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="clients-item">
-                        <a class="clients-item-link"> 
+                        <a href="" class="clients-item-link"> 
                             <svg class="icon-client">
                                 <use href="./images/design-img/sprite.svg#icon-logo4"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="clients-item">
-                        <a class="clients-item-link"> 
+                        <a href="" class="clients-item-link"> 
                             <svg class="icon-client" >
                                 <use href="./images/design-img/sprite.svg#icon-logo5"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="clients-item">
-                        <a class="clients-item-link"> 
+                        <a href="" class="clients-item-link"> 
                             <svg class="icon-client">
                                 <use href="./images/design-img/sprite.svg#icon-logo6"></use>
                             </svg>
