--- a/index.html
+++ b/index.html
@@ -120,13 +120,22 @@
                 <h2 class="section-title">Чем мы занимаемся</h2>
                 <ul class="works-list list">
                     <li class="works-item">
+                        <div class="works-item-image-wrapper">
                         <img src="./images/img1.png" width="370" height="294" alt="мужчина пишет програмный код">
+                        <h3 class="works-item-text-overlay">Десктопные приложения</h3>
+                        </div>
                     </li>
                     <li class="works-item">
+                        <div class="works-item-image-wrapper">
                         <img src="./images/img2.png" width="370" height="294" alt="девушка тестирует мобильное приложение">
+                        <h3 class="works-item-text-overlay">Мобильные приложения</h3>
+                        </div>
                     </li>
                     <li class="works-item">
+                        <div class="works-item-image-wrapper">
                         <img src="./images/img3.png" width="370" height="294" alt="девушка выбирает цветовую схему">
+                        <h3 class="works-item-text-overlay">Дизайнерские решения</h3>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -401,6 +410,17 @@
         </div>
         </div>
     </footer>
+
+    <!-- Модальное окно -->
+    <div class="backdrop is-hidden">
+        <div class="modal">
+            <button type="button" class="btn-close">
+                <svg class="icon-btn-close" width="17" height="17">
+                    <use href="./images/design-img/sprite.svg#icon-close"></use>
+                </svg>
+            </button>
+        </div>
+    </div>
 </body>
 
 </html>
