--- a/portfolio.html
+++ b/portfolio.html
@@ -73,9 +73,14 @@
                     <ul class="projects list">
                         <li class="projects-item" >
                             <a href="" class="projects-item-link link">
-                                <img src="./images/portfolio-page/img1.jpg" alt="Монитор с изображением главной страницы сайта" 
-                                width="370"
-                                height="294">
+                                <div class="projects-item-wrapper">
+                                    <img src="./images/portfolio-page/img1.jpg" alt="Монитор с изображением главной страницы сайта" 
+                                    width="370"
+                                    height="294">
+                                    <p class="projects-overlay">
+                                        Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                                    </p>
+                                </div>
                                 <div class="projects-item-description">
                                     <h2 class="projects-title">Технокряк</h2>
                                     <p class="projects-text">Веб-сайт</p>
@@ -84,9 +89,14 @@
                         </li>
                         <li class="projects-item">
                             <a href="" class="projects-item-link link">
+                                <div class="projects-item-wrapper">
                                 <img src="./images/portfolio-page/img2.jpg" alt="Два баскетболиста борятся за мяч"
                                 width="370"
                                 height="294">
+                                <p class="projects-overlay">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, ullam.
+                                </p>
+                            </div>
                                 <div class="projects-item-description">
                                     <h2 class="projects-title">Постер New Orlean vs Golden Star</h2>
                                     <p class="projects-text" >Дизайн</p>
@@ -95,9 +105,14 @@
                         </li>
                         <li class="projects-item">
                             <a href="" class="projects-item-link link">
+                                <div class="projects-item-wrapper">
                                 <img src="./images/portfolio-page/img3.jpg" alt="Логтотип рыбного ресторана"
                                 width="370"
                                 height="294">
+                                <p class="projects-overlay">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, ullam.
+                                </p>
+                            </div>
                                 <div class="projects-item-description">
                                     <h2 class="projects-title">Ресторан Seafood</h2>
                                     <p class="projects-text">Приложение</p>
@@ -106,9 +121,14 @@
                         </li>
                         <li class="projects-item">
                             <a href="" class="projects-item-link link">
-                                <img src="./images/portfolio-page/img4.jpg" alt="Наушники"
-                                width="370"
-                                height="294">
+                                <div class="projects-item-wrapper">
+                                    <img src="./images/portfolio-page/img4.jpg" alt="Наушники"
+                                    width="370"
+                                    height="294">
+                                    <p class="projects-overlay">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, ullam.
+                                    </p>
+                                </div>
                                 <div class="projects-item-description">
                                     <h2 class="projects-title">Проект Prime</h2>
                                     <p class="projects-text">Маркетинг</p>
@@ -117,9 +137,14 @@
                         </li>
                         <li class="projects-item">
                             <a href="" class="projects-item-link link">
+                                <div class="projects-item-wrapper">
                                 <img src="./images/portfolio-page/img5.jpg" alt="Две закрытые коробки"
                                 width="370"
                                 height="294">
+                                    <p class="projects-overlay">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, ullam.
+                                    </p>
+                                </div>
                                 <div class="projects-item-description">
                                     <h2 class="projects-title">Проект Boxes</h2>
                                     <p class="projects-text">Приложение</p>
@@ -128,9 +153,14 @@
                         </li>
                         <li class="projects-item">
                             <a href="" class="projects-item-link link">
+                                <div class="projects-item-wrapper">
                                 <img src="./images/portfolio-page/img6.jpg" alt="Монитор с открытой страницей сайта"
                                 width="370"
                                 height="294">
+                                    <p class="projects-overlay">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, ullam.
+                                    </p>
+                                </div>
                                 <div class="projects-item-description">
                                     <h2 lang="en" class="projects-title">Inspiration has no Borders</h2>
                                     <p class="projects-text" >Веб-сайт</p>
@@ -139,9 +169,14 @@
                         </li>
                         <li class="projects-item">
                             <a href="" class="projects-item-link link">
+                                <div class="projects-item-wrapper">
                                 <img src="./images/portfolio-page/img7.jpg" alt="Открытый разварот журнала"
                                 width="370"
                                 height="294">
+                                    <p class="projects-overlay">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, ullam.
+                                    </p>
+                                </div>
                                 <div class="projects-item-description">
                                     <h2 class="projects-title">Издание Limited Edition</h2>
                                     <p class="projects-text">Дизайн</p>
@@ -150,9 +185,14 @@
                         </li>
                         <li class="projects-item">
                             <a href="" class="projects-item-link link">
+                                <div class="projects-item-wrapper">
                                 <img src="./images/portfolio-page/img8.jpg" alt="Леибл"
                                 width="370"
                                 height="294">
+                                    <p class="projects-overlay">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, ullam.
+                                    </p>
+                                </div>
                                 <div class="projects-item-description">
                                     <h2 class="projects-title">Проект LAB</h2>
                                     <p class="projects-text" >Маркетинг</p>
@@ -161,9 +201,14 @@
                         </li>
                         <li class="projects-item">
                             <a href="" class="projects-item-link link">
+                                <div class="projects-item-wrapper">
                                 <img src="./images/portfolio-page/img9.jpg" alt="Монитор с открытой страницей обучаещего сайта"
                                 width="370"
                                 height="294">
+                                    <p class="projects-overlay">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, ullam.
+                                    </p>
+                                </div>
                                 <div class="projects-item-description">
                                     <h2 lang="en" class="projects-title">Growing Business</h2>
                                     <p class="projects-text">Приложение</p>
